# prac_7

./: 7_1.c  7_2.c  CMakeLists.txt  README.md  script.sh
